# Encryption-AES-WIN-QR

./: CMakeLists.txt  README.md  main.cpp
